# p2p_watcher67

Client/: CMakeLists.txt
Client/include/: GroupData.h  connection.h  mainclient.h
Client/source/: connection.cpp  main.cpp  mainclient.cpp  mainclient.ui
Server/: CMakeLists.txt
Server/include/: ClientSession.h  GroupData.h  Logger.h  Server.h  crc.h
Server/source/: AsioTcpServer.cpp  AsioUdpServer.cpp  ClientSession.cpp  Server.cpp  crc.cpp  main.cpp
